# LordWorld

./: .gitignore  CMakeLists.txt  LW_abstract.cpp  README.txt  clipboard  run.sh
doc/: -.txt  0.1.4.txt  Doxyfile.in  LW_OOP.ods  LW_abstract.cpp  TODO.txt  auto_doc.sh  changelog.txt  documentation.txt  functions.txt  headers.txt  todo.txt
doc/ChangeLog/: 0.0.8.txt  0.0.9.txt  0.1.0.txt  0.1.1.txt  0.1.2.txt  0.1.3.txt  0.1.4.txt  0.1.5.txt  0.1.6.txt  0.1.7.txt  0.1.8.txt  0.1.9.txt  0.2.0.txt  changelog.txt
doc/auto_doc/: Doxyfile.in
lib/: gmon.out
src/: BuffListLoader.cpp  Game.h  LW.cpp  NPC.h  Player.h  Renderer.h  Resources.h  Timer.h  animations.h  attacks.h  buffs.h  classes.h  client.h  cooldowns.h  cordOperations.h  createItem.h  draw_sprites.h  drawmap.h  equipment.h  gainLVL.h  game_functions.h  game_vars.h  global_timers.h  gui.h  images.h  info.h  init_images.h  init_text.h  item_info.h  item_types.h  items.h  keys.h  keys2.h  main.cpp  map.h  monsterDeath.h  monsters.h  spells.h  spells_set.h  split.h  (+9 more)
src/Game/: EntityManager.h  Game.h  Player.h  Renderer.h  SpriteLoader.h  WindowManager.h
src/Graphics/: DynamicText.h  NewSprite.h
src/Items/: DefineItemType.h
src/Map/: DefineTile.h  Map.h  MapManager.h
src/Monster/: DefineMonster.h  Monster.h
src/NPC/: DefineNPC.h
src/Player/: Keys.h  Player.h  PlayerVars.h
src/configs/: NPC.h  cooldowns.h  game_vars.h
test/: build.sh  build_and_run.sh
versions/: LW 0.0.4.cpp  LW 0.0.5.cpp  LW 0.0.6b.cpp  LW 0.0.6c.cpp  LW 0.0.6d.cpp  LW 0.0.7.cpp  LW 0.0.8b.cpp  LW 0.0.9.cpp  LW 0.1.4.cpp
(+115 files in other folders)
